--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -9,49 +9,4 @@
   
 <% end %>
 
-<% groups_of = 2 %>
-<% resource.metrics.uniq.in_groups_of(groups_of) do |metrics| %>
-  <div class="row">
-    <% metrics.each do |metric| %>
-      <div class="span<%= 12/groups_of %>">
-        <% if metric.present? %>
-          <h4><%= metric %></h4>
-          <%= metric.note.present? ? simple_format(metric.note) : "<br />".html_safe %>
-          <% if metric.metric_type.name == 'Text' %>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>Date</th>
-                  <th>Athlete</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <% resource.recorded_metrics.where{ metric_id == my{metric.id}}.each do |recorded_metric| %>
-                  <td><%= recorded_metric.recorded_on %></td>
-                  <td><%= recorded_metric.user %></td>
-                  <td><%= recorded_metric.value %></td>
-                <% end %>
-              </tbody>
-            </table>
-          <% else %>
-            <script>
-            <% i=0 %>
-            var _<%= metric.name.parameterize.underscore %> = [
-              <%- resource.recorded_metrics.reorder{ recorded_on.asc }.where{ metric_id == my{metric.id}}.group_by(&:user_id).each do |user_id, recorded_metrics| %>
-                <%= i > 0 ? "," : "" %>[<%= recorded_metrics.map{|rm| "['#{rm.recorded_on.strftime('%Y-%m-%d')}',#{rm.value}]" }.join(",").html_safe %>]
-              <% i = i+1; end -%>
-            ];
-            var _<%= metric.name.parameterize.underscore %>_labels = [<%= resource.recorded_metrics.where{ metric_id == my{metric.id}}.map{|rm| "{label: '#{rm.user.to_s}'}" }.uniq.join(",").html_safe %>];
-            var _<%= metric.name.parameterize.underscore %>_min = '<%= resource.recorded_metrics.reorder{ recorded_on.asc }.first.recorded_on.strftime('%Y-%m-%d') %>';
-            var _<%= metric.name.parameterize.underscore %>_max = '<%= resource.recorded_metrics.reorder{ recorded_on.asc }.last.recorded_on.strftime('%Y-%m-%d') %>';
-            </script>
-            <div data-graph-title="<%= metric %>" class="graph" id="graph-<%= metric.id %>" data-variable-name="_<%= metric.name.parameterize.underscore %>">
-          
-            </div>
-          <% end %>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
-<% end %>
+<%= render 'shared/dashboard' %>
