--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @groups.each do |group| %>
+    <% (@groups||[]).each do |group| %>
       <tr>
         <td><%= link_to group.id, group_path(group) %></td>
         <td><%= group.name %></td>
