--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -19,9 +19,9 @@
   </div>
 <% end %>
 
-<% if resource.file_contents.present? %>
+<% if resource.data_files.count > 0 %>
   <div class="alert alert-info">
-    Your file is still processing. Please check back in a minute.
+    Your have files being processed.
   </div>
 <% end %>
 
