fixes upload problem

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -21,7 +21,7 @@
 
 <% if resource.data_files.count > 0 %>
   <div class="alert alert-info">
-    Your have files being processed.
+    You have files being processed.
   </div>
 <% end %>
 
