--- a/app/views/shared/_raw_graph.html.erb
+++ b/app/views/shared/_raw_graph.html.erb
@@ -1,4 +1,4 @@
-<% user_ids = resource.is_a?(User) ? resource.id : params[:taken_users].split(",") %>
+<% user_ids = resource.is_a?(User) ? resource.id : (params[:taken_users]||'').split(",") %>
 <% all_metrics = resource.recorded_metrics.where{ user_id >> my{user_ids} }.reorder{ recorded_on.asc }.where{ recorded_on >> my{params[:start_date]..params[:end_date]}}.where{ metric_id == my{metric.id} } %>
 
 <table class="table table-striped table-condensed">
