--- a/app/views/shared/_metric_cells.html.erb
+++ b/app/views/shared/_metric_cells.html.erb
@@ -24,6 +24,7 @@
     <div style="clear:both;"></div>
   </div>
 </div>
+<% if false %>
 <div class="scroll-pane">
   <table class="table table-striped">
     <thead>
@@ -68,3 +69,4 @@
 <div class="form-actions">
   <a class="btn btn-primary global-submit" href="#">Submit</a>
 </div>
+<% end %>
