--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -119,4 +119,8 @@
       </ul>
     </li>
   </ul>
+  
+  <form class="navbar-search pull-right">
+    <input type="text" class="search-query live-search" data-url="/admin/users" placeholder="Athlete Search">
+  </form>
 </div>
