--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -160,3 +160,8 @@ form {
 .jqplot-point-label {
   display: none !important;
 }
+
+.award-cell {
+  text-align: center !important;
+  width: 60px;
+}
