--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -12,7 +12,7 @@
   
   <div class="span6 btn-group">
     <%= link_to t('metrics'), [:dashboard,@group], class: 'btn btn-primary' %>
-    <%= link_to t('download_data'), division_group_path(parent,@group,format:'csv'), class: 'btn btn-primary  modal-trigger', 'data-modal' => 'download-modal' %>
+    <%= link_to t('download_data'), division_group_path((parent||@group.division),@group,format:'csv'), class: 'btn btn-primary  modal-trigger', 'data-modal' => 'download-modal' %>
     <%= link_to t('add_member'),new_group_user_path(@group), :class => 'btn btn-primary ' if can? :update, @group  %>
     
     <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -30,6 +30,54 @@
     Your file is still processing. Please check back in a minute.
   </div>
 <% end %>
+
+<h2>Performance Profile</h2>
+<h5>Comparing: <strong><%= @comparison %></strong> <small>(<a id="performance-toggle" href="#">Change</a>)</small></h5>
+
+<form style="display:none;">
+  <input type="hidden" id="compare-id" value="<%= resource.id %>">
+  <input type="hidden" id="compare-type" value="<%= resource.class.name %>">
+</form>
+<div class="row-fluid">
+  <div class="span2" style="display:none;" id="performance-nav">
+    <ul class="nav nav-pills nav-stacked">
+      <% resource.metrics.each do |metric| %>
+        <li class="<%= metric == @comparison ? 'active' : '' %>"><a href="?compare_id=<%= metric.id %>"><%= metric %></a></li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="span12" id="performance-content">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Athlete</th>
+          <th style="text-align: right;">Last value</th>
+          <th>Last Date</th>
+          <th style="text-align: center;">Rank</th>
+          <th style="text-align: center; width: 100px;">Percentile</th>
+          <th style="text-align: center; width: 100px;">Z-Score</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% resource.users.each do |m| %>
+          <% rm = m.recorded_metrics.where{ metric_id == my{@comparison.id}}.reorder{ recorded_on.desc } %>
+          <% if rm.limit(1).first %>
+            <tr id="performance-calculation-<%= @comparison.id %>-<%= m.id %>" class="performance-calculation" data-for_metric="<%= @comparison.id %>" data-for_user="<%= m.id %>">
+              <td><%= link_to m, "/admin/users/#{m.id}?compare_id=#{resource.id}&amp;compare_type=#{resource.class.name}" %></td>
+              <td style="text-align: right;"><%= rm.limit(1).first.numerical_value %></td>
+              <td><%= rm.limit(1).first.recorded_on %></td>
+              <td style="text-align: center;" class="rank"></td>
+              <td style="text-align: center;"class="percentile"></td>
+              <td style="text-align: center;" class="z-score"></td>
+            </tr>
+          <% end %>
+        <% end %>
+    
+      </tbody>
+  
+    </table>
+  </div>
+</div>
 
 <div class="accordion" id="accordion">
   <div class="accordion-group">
@@ -77,7 +125,7 @@
 <%= render 'shared/upload_modal' %>
 
 <div id="download-modal" class="modal hide fade">
-  <form action="<%= division_group_path(parent,@group,format:'csv') %>" method="get" class="horizontal">
+  <form action="<%= group_path(@group,format:'csv') %>" method="get" class="horizontal">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h3>Choose Time Frame</h3>
