--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,7 +106,11 @@
     <header class="navbar navbar-fixed-top">
       <nav class="navbar-inner">
         <div class="container-fluid">
-          <%= render 'layouts/navigation' %>
+          <% if false && current_user.try(:has_role?,'admin') %>
+            <%= render 'layouts/navigation' %>
+          <% else %>
+            <%= render 'layouts/athlete_navigation' %>
+          <% end %>
         </div>
       </nav>
     </header>
