--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%- model_class = User -%>
 
 <%= content_for(:breadcrumb) do %>
-  <div class="span6">
+  <!--div class="span6">
     <ul class="breadcrumb">
       <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
       <% if resource.organization %>
@@ -24,50 +24,292 @@
      <% if can?(:update, @user) %>
       <%= link_to t('metrics'), [:dashboard,@user], :class => 'btn ' %>
     <% end %>
-  </div>
+  </div-->
 <% end %>
 
-<h2>Performance Profile</h2>
+<div class="row-fluid" style="margin-bottom: 30px;">
+  <div class="span2">
+    <img src="http://placehold.it/300x300">
+  </div>
+  <div class="span8">
+    <h2><%= resource %></h2>
+    <h4>#4 | LF</h4>
+    <p>Platea mattis cum adipiscing tortor diam facilisis placerat aenean sed porttitor velit odio tristique, ac rhoncus, nascetur, magna et magna et!</p>
+    <p>Etiam lundium in. Lectus turpis placerat integer.</p>
+    <p>Urna porttitor, cum nunc? In dignissim ac eros, sed elit magna! In duis vut. Purus ultrices magna tincidunt nec montes? Urna enim placerat, nascetur, facilisis augue urna nunc, aliquam dolor vel placerat.</p>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Metric</th>
-      <th>History</th>
-      <th>Zone</th>
-      <th>Last value</th>
-      <th>Last Date</th>
-      <th>Rank</th>
-      <th>Percentile</th>
-      <th>Z-Score</th>
-      <th>Bad</th>
-      <th>Average</th>
-      <th>Excellent</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @metrics.each do |m| %>
-      <% rm = m.recorded_for(resource).reorder{ recorded_on.desc } %>
-      <tr id="performance-calculation-<%= m.id %>-<%= resource.id %>" class="performance-calculation" data-for_metric="<%= m.id %>" data-for_user="<%= resource.id %>">
-        <td><%= m %></td>
-        <td><div class="inlinesparkline"><%= rm.pluck('recorded_metrics.numerical_value').to_a.join(",") %></div></td>
-        <td></td>
-        <td><%= rm.limit(1).first.numerical_value %></td>
-        <td><%= rm.limit(1).first.recorded_on %></td>
-        <td class="rank"></td>
-        <td class="percentile"></td>
-        <td class="z-score"></td>
-        <td><%= rm.minimum(:numerical_value) %></td>
-        <td><%= number_with_precision(rm.average(:numerical_value), precision: 1) %></td>
-        <td><%= rm.maximum(:numerical_value) %></td>
-      </tr>
-    <% end %>
-    
-  </tbody>
+    <p>Ridiculus tincidunt tortor? Sit ac et. Placerat in mid ultricies elementum. Vel sed arcu habitasse montes ut adipiscing augue, massa tincidunt massa vel. Arcu? Ac pulvinar? Magnis sed augue, sed magna turpis scelerisque adipiscing etiam, dictumst penatibus aliquam sit sit adipiscing elit enim, rhoncus facilisis nisi ridiculus. Purus amet turpis ac mattis ac non cursus vel quis sed dapibus.</p>
+  </div>
+  <div class="span2">
+    <%= image_tag "http://i.imgur.com/0Gb6iAl.jpg" %>
+  </div>
+</div>
+
+
+<ul class="user-home nav nav-pills">
+  <li><a href="#" data-target="#performance-profile">Performance Profile</a></li>
+  <li><a href="#" data-target="#recovery-profile">Recovery Profile</a></li>
+  <li class="active"><a href="#" data-target="#dashboard">Dashboard</a></li>
+  <li><a href="#" data-target="#admin">Admin</a></li>
+  <!--li><a href="#" >Surveys</a></li>
+  <li><a href="#">Workouts</a></li>
+  <li><a href="#">Alerts</a></li>
+  <li><a href="#">Announcements</a></li>
+  <li><a href="#">Activity</a></li>
+  <li><a href="#">Awards</a></li>
+  <li><a href="#">Comments</a></li-->
+</ul>
+
+<div id="recovery-profile" class="player-panel" style="display:none;">
   
-</table>
+</div>
 
-<div class="accordion" id="accordion">
+<div id="dashboard" class="player-panel">
+  <div class="row-fluid">
+    <div class="span4">
+      <h3>Alerts</h3>
+      <% AssignedAlert.limit(4).each do |assigned_alert| %>
+        <blockquote><p><span class="label label-important"><%= assigned_alert.alert.metric %></span> <%= assigned_alert.alert.message %></p> <small><%= assigned_alert.user %> <cite><%= assigned_alert.created_at.to_date %></cite></small></blockquote>
+      <% end %>
+    
+    </div>
+  
+    <div class="span4">
+      <h3>Trainer Comments</h3>
+      <% Comment.all.each do |comment| %>
+        <blockquote><p><%= comment.body %></p> <small><%= comment.commenter.name %> on <%= comment.user %> <cite><%= comment.left_on %></cite></small></blockquote>
+      <% end %>
+    </div>
+  
+    <div class="span4">
+      <h3>Awards</h3>
+      <table class="table table-striped">
+        <tbody>
+          <tr>
+            <td class="award-cell">
+              <%= image_tag "http://content.sportslogos.net/logos/54/71/full/2309.gif" %><br />
+              <strong>Iron Pirate</strong>
+            </td>
+            <td>10/12/2014</td>
+            <td>
+              Given to members of the 400lb bench-press club
+            </td>
+          </tr>
+          <tr>
+            <td class="award-cell">
+              <%= image_tag "https://cdn0.iconfinder.com/data/icons/elite-sports/512/trophy-fill-512.png" %><br />
+              <strong>Mr. Consistent</strong>
+            </td>
+            <td>8/2/2014</td>
+            <td>
+              20 days without missing a workout
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
+  <div class="row-fluid">
+    <div class="span4">
+      <h3>Workouts</h3>
+      <table class="table table-striped">
+        <tbody>
+          <tr>
+            <td>Workout #1</td>
+            <td><a href="#">Download</a></td>
+          </tr>
+          <tr>
+            <td>Workout #2</td>
+            <td><a href="#">Download</a></td>
+          </tr>
+          <tr>
+            <td>Workout #3</td>
+            <td><a href="#">Download</a></td>
+          </tr>
+          <tr>
+            <td>Workout #4</td>
+            <td><a href="#">Download</a></td>
+          </tr>
+          <tr>
+            <td>Workout #5</td>
+            <td><a href="#">Download</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    
+    <div class="span4">
+      <h3>Surveys</h3>
+      <table class="table table-striped">
+        <tbody>
+          <tr>
+            <td>10/10/1014 Recovery Survey</td>
+            <td><a href="#">Take Now</a></td>
+          </tr>
+          <tr>
+            <td>1/10/1014 Recovery Survey</td>
+            <td><a href="#">See Results</a></td>
+          </tr>
+          <tr>
+            <td>1/10/1013 Recovery Survey</td>
+            <td><span class="label label-important">Misssed</span></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    
+    <div class="span4">
+      <h3>Announcements</h3>
+      <blockquote><h5>Workouts Cancelled</h5><p>The team will not be meeting for normal workouts tomorrow</p> <small>Brendon Huttmann<cite>2014-01-05</cite></small></blockquote>
+      <blockquote><h5>Kyle Mcpherson</h5><p>Kyle is rejoining the team after 3 weeks on the self. Let's welcome him back</p> <small>Brendon Huttmann<cite>2013-01-05</cite></small></blockquote>
+    </div>
+  </div>
+  
+  <div class="row-fluid">
+    <div class="span6">
+      <h3>Activity</h3>
+      <ul class="media-list">
+        <li class="media">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://placehold.it/64x64">
+          </a>
+          <div class="media-body">
+            <h5 class="media-heading">Andrew McCutchen</h5>
+            <p>Just completed the "Recovery Survey"</p>
+          </div>
+        </li>
+        
+        <li class="media">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://placehold.it/64x64">
+          </a>
+          <div class="media-body">
+            <h5 class="media-heading">Kyle McPherson</h5>
+            <p>Just joined the Iron Pirate Club</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    
+    <div class="span6">
+      <h3>Inbox</h3>
+      
+      <ul class="media-list">
+        <li class="media">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://placehold.it/64x64">
+          </a>
+          <div class="media-body">
+            <h5 class="media-heading">Cole Durham</h5>
+            <p>Are you getting your notices?</p>
+          </div>
+        </li>
+        
+        <li class="media">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://placehold.it/64x64">
+          </a>
+          <div class="media-body">
+            <h5 class="media-heading">Brendon Huttmann</h5>
+            <p>Keep up the good work</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+    
+  </div>
+</div>
+
+<div id="admin" class="player-panel" style="display:none;">
+  <div class="row-fluid">
+    <div class="span6">
+      <h3>Merge Tool</h3>
+      <p>The merge tool will allow you to copy all an athletes data to another player.</p>
+      <p>Use this tool if you misspelled someone's name and then inadvertently created a new athlete with the correct spelling.</p>
+      <p>Submitting the form below will copy all data from this athlete to the target athlete selected and completely remove this athlete, so make sure this is what you want to do.</p>
+      
+      <%= simple_form_for resource, :html => { :class => 'form-horizontal' } do |f| %>
+        <%= f.input :transfer_to %>
+        <div class="form-actions">
+          <%= f.button :submit, :class => 'btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+    
+    <div class="span6">
+      <h3>Manage Assignments</h3>
+      
+      <p>This area will let you add and remove the player from groups</p>
+    </div>
+  </div>
+</div>
+
+<div id="performance-profile" class="player-panel" style="display:none;">
+  <!--h2>Performance Profile</h2-->
+  <h5>Compared To: <strong><%= link_to @comparison, @comparison %></strong> <small>(<a id="performance-toggle" href="#">Change</a>)</small></h5>
+  <form style="display:none;">
+    <input type="hidden" id="compare-type" value="<%= @comparison.class.name %>">
+    <input type="hidden" id="compare-id" value="<%= @comparison.id %>">
+  </form>
+  <div class="row-fluid">
+    <div class="span2" style="display:none;" id="performance-nav">
+      <ul class="nav nav-pills nav-stacked">
+        <li class="<%= resource.organizations.first == @comparison ? 'active' : '' %>"><a href="?compare_type=organization&amp;compare_id=<%= resource.organizations.first.id %>"><%= resource.organizations.first %></a></li>
+        <% Organization.first.divisions.each do |division| %>
+          <% if resource.divisions.include?(division) %>
+            <li class="<%= division == @comparison ? 'active' : '' %>"><a href="?compare_type=division&amp;compare_id=<%= division.id %>">- <%= division %></a></li>
+            <% division.groups.each do |group| %>
+              <% if resource.groups.include?(group) %>
+                <li class="<%= group == @comparison ? 'active' : '' %>"><a href="?compare_type=group&amp;compare_id=<%= group.id %>">-- <%= group %></a></li>
+              <% end %>
+            <% end %>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
+    <div class="span12" id="performance-content">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Metric</th>
+            <th style="text-align: center;">History</th>
+            <th style="text-align: right;">Last value</th>
+            <th>Last Date</th>
+            <th style="text-align: center;">Rank</th>
+            <th style="text-align: center; width: 100px;">Percentile</th>
+            <th style="text-align: center; width: 100px;">Z-Score</th>
+            <th style="text-align: right;">Min</th>
+            <th style="text-align: right;">Avg</th>
+            <th style="text-align: right;">Max</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @metrics.each do |m| %>
+            <% rm = m.recorded_for(resource).reorder{ recorded_on.desc } %>
+            <tr id="performance-calculation-<%= m.id %>-<%= resource.id %>" class="performance-calculation" data-for_metric="<%= m.id %>" data-for_user="<%= resource.id %>">
+              <td><%= link_to m, "/#{@comparison.class.name.downcase.pluralize}/#{@comparison.id}?compare_id=#{m.id}" %></td>
+              <td style="text-align: center;"><div class="inlinesparkline"><%= rm.pluck('recorded_metrics.numerical_value').to_a.join(",") %></div></td>
+              <td style="text-align: right;"><%= rm.limit(1).first.numerical_value %></td>
+              <td><%= rm.limit(1).first.recorded_on %></td>
+              <td style="text-align: center;" class="rank"></td>
+              <td style="text-align: center;"class="percentile"></td>
+              <td style="text-align: center;" class="z-score"></td>
+              <td class="min" style="text-align: right;"><%= rm.minimum(:numerical_value) %></td>
+              <td style="text-align: right;"><%= number_with_precision(rm.average(:numerical_value), precision: 2) %></td>
+              <td class="max" style="text-align: right;"><%= rm.maximum(:numerical_value) %></td>
+            </tr>
+          <% end %>
+    
+        </tbody>
+  
+      </table>
+    </div>
+  </div>
+</div>
+
+<!--div class="accordion" id="accordion">
   <div class="accordion-group">
     <div class="accordion-heading">
       <h4 class="accordion-title">
@@ -199,39 +441,6 @@
     </div>
   </div>
   
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <h4 class="accordion-title">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#metrics">
-          <%=t 'metrics' %>
-        </a>
-      </h4>
-    </div>
-    <div id="metrics" class="accordion-collapse collapse">
-      <div class="accordion-body">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th><%=t 'metric' %></th>
-              <th><%=t 'value' %></th>
-              <th><%=t 'recorded_on' %></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @user.organizations.each do |organization| %>
-              <% organization.metrics.each do |metric| %>
-                <tr>
-                  <td><%= metric %></td>
-                  <td><%= @user.recorded_metrics.current_for(metric.id).first.try(:value) || 'N/A' %></td>
-                  <td><%= @user.recorded_metrics.current_for(metric.id).first.try(:recorded_on) || 'N/A' %></td>
-                </tr>
-              <% end %>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
   
   <div class="accordion-group">
     <div class="accordion-heading">
@@ -285,4 +494,4 @@
       </div>
     </div>
   </div>
-</div>
+</div-->
