--- a/app/views/layouts/_athlete_navigation.html.erb
+++ b/app/views/layouts/_athlete_navigation.html.erb
@@ -6,7 +6,7 @@
 <%= link_to "Performance Unlimited", root_path, :class => 'brand' %>
 <div class="nav-collapse">
   <ul class="nav">
-    <% tmp_user = User.find(2025) %>
+    <% tmp_user = current_user #User.find(2025) %>
     <li class="dropdown">
       <a href="#"class="dropdown-toggle" data-toggle="dropdown">Jump To<b class="caret"></b></a>
       <ul class="dropdown-menu">
