--- a/app/views/layouts/_athlete_navigation.html.erb
+++ b/app/views/layouts/_athlete_navigation.html.erb
@@ -4,32 +4,35 @@
   <span class="icon-bar"></span>
 </a>
 <%= link_to "Performance Unlimited", root_path, :class => 'brand' %>
-<div class="nav-collapse">
-  <ul class="nav">
-    <% tmp_user = current_user #User.find(2025) %>
-    <li class="dropdown">
-      <a href="#"class="dropdown-toggle" data-toggle="dropdown">Jump To<b class="caret"></b></a>
-      <ul class="dropdown-menu">
-        <% tmp_user.organizations.each do |organization| %>
-          <li>
-            <%= link_to organization, organization %>
-          </li>
-          <% tmp_user.divisions.where{ organization_id == my{ organization.id } }.each do |division| %>
+<% tmp_user = current_user #User.find(2025) %>
+
+<% if tmp_user %>
+  <div class="nav-collapse">
+    <ul class="nav">
+      <li class="dropdown">
+        <a href="#"class="dropdown-toggle" data-toggle="dropdown">Jump To<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <% tmp_user.organizations.each do |organization| %>
             <li>
-              <%= link_to "-- #{division}", division %>
+              <%= link_to organization, organization %>
             </li>
-            <% tmp_user.groups.where{ division_id == my{ division.id } }.each do |group| %>
+            <% tmp_user.divisions.where{ organization_id == my{ organization.id } }.each do |division| %>
               <li>
-                <%= link_to "---- #{group}", group %>
+                <%= link_to "-- #{division}", division %>
               </li>
+              <% tmp_user.groups.where{ division_id == my{ division.id } }.each do |group| %>
+                <li>
+                  <%= link_to "---- #{group}", group %>
+                </li>
+              <% end %>
             <% end %>
           <% end %>
-        <% end %>
-      </ul>
-    </li>
-  </ul>
+        </ul>
+      </li>
+    </ul>
   
-  <form class="navbar-search pull-right">
-    <input type="text" class="search-query live-search" data-url="/admin/users" placeholder="Athlete Search">
-  </form>
-</div>
+    <form class="navbar-search pull-right">
+      <input type="text" class="search-query live-search" data-url="/admin/users" placeholder="Athlete Search">
+    </form>
+  </div>
+<% end %>
