--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,7 +106,7 @@
     <header class="navbar navbar-fixed-top">
       <nav class="navbar-inner">
         <div class="container-fluid">
-          <% if current_user.admined_organizations.count > 0 %>
+          <% if signed_in? && current_user.admined_organizations.count > 0 %>
             <%= render 'layouts/navigation' %>
           <% else %>
             <%= render 'layouts/athlete_navigation' %>
