--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -80,14 +80,14 @@
 
 <div class="row-fluid">
   <div class="span6">
-    <h2>Look Up Athlete</h2>
+    <!--h2>Look Up Athlete</h2>
     <form id="player-search-form" class="form-inline">
       <div class="control-group">
         <div class="controls">
           <input type="text" class="string optional" id="player-search-name" placeholder="Start typing athlete's name...">
         </div>
       </div>
-    </form>
+    </form-->
     
     <h2 style="clear:both;">Surveys</h2>
     <%= render partial: "#{@division.nil? ? 'divisions' : @survey.nil? ? 'no_survey' : 'survey'}_index" %>
