--- a/app/views/layouts/_athlete_navigation.html.erb
+++ b/app/views/layouts/_athlete_navigation.html.erb
@@ -29,6 +29,9 @@
           <% end %>
         </ul>
       </li>
+      <li>
+        <%= link_to t('log_out'), destroy_user_session_path, :method=>'delete' %>        
+      </li>
     </ul>
   
     <form class="navbar-search pull-right">
