--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -25,7 +25,7 @@
   <tbody>
     <% @surveys.each do |survey| %>
       <tr>
-        <td><%= link_to survey, survey %></td>
+        <td><%= link_to (survey.name || survey.id), survey %></td>
         <td><%=l survey.created_at %></td>
         <td>
           <div class="btn-group">
@@ -41,7 +41,7 @@
               <% if can?(:destroy, survey) %>
                 <li><%= link_to t('.destroy', :default => t("helpers.links.destroy")), survey_path(survey), :method => :delete, :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %></li>
               <% end %>
-              <%= link_to t('print'), root_path(survey_id: survey.id, print: true), target: "_blank" %></li>
+              <li><%= link_to t('print'), root_path(survey_id: survey.id, print: true), target: "_blank" %></li>
             </ul>
           </div>
         </td>
